src/main/java/parser/PreProParser.java
// Generated from src/main/java/parser/PrePro.g4 by ANTLR 4.7.1

package parser;

import java.util.Arrays;

import org.nd4j.linalg.factory.Nd4j;

import nodes.*;
import nodes.statement.*;
import nodes.expression.*;
import nodes.expression.arithmetic.*;
import nodes.function.*;
import nodes.debugging.*;
import variables.*;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PreProParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, WS=21, BLOCK_COMMENT=22, LINE_COMMENT=23, 
		TYPE=24, IDENTIFIER=25, STRING_LITERAL=26, NUMERIC_LITERAL=27;
	public static final int
		RULE_prepro = 0, RULE_mainFunction = 1, RULE_exportDefinitions = 2, RULE_function = 3, 
		RULE_functionArguments = 4, RULE_statement = 5, RULE_assignStatement = 6, 
		RULE_functionCallStatement = 7, RULE_printStatement = 8, RULE_debugStatement = 9, 
		RULE_expression = 10, RULE_term = 11, RULE_factor = 12;
	public static final String[] ruleNames = {
		"prepro", "mainFunction", "exportDefinitions", "function", "functionArguments", 
		"statement", "assignStatement", "functionCallStatement", "printStatement", 
		"debugStatement", "expression", "term", "factor"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'function'", "'main'", "'('", "')'", "'{'", "'import'", "';'", 
		"'export'", "'}'", "','", "'returns'", "'return'", "'='", "'print'", "'debug'", 
		"'+'", "'-'", "'*'", "'X'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "WS", "BLOCK_COMMENT", 
		"LINE_COMMENT", "TYPE", "IDENTIFIER", "STRING_LITERAL", "NUMERIC_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrePro.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	private NodeFactory nodeFactory = new NodeFactory();

	public PreProParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PreproContext extends ParserRuleContext {
		public MainNode result;
		public MainFunctionContext mainFunction;
		public FunctionContext function;
		public TerminalNode EOF() { return getToken(PreProParser.EOF, 0); }
		public List<MainFunctionContext> mainFunction() {
			return getRuleContexts(MainFunctionContext.class);
		}
		public MainFunctionContext mainFunction(int i) {
			return getRuleContext(MainFunctionContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public PreproContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prepro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterPrepro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitPrepro(this);
		}
	}

	public final PreproContext prepro() throws RecognitionException {
		PreproContext _localctx = new PreproContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prepro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 nodeFactory.startFunctionList();
			                                      MainFunctionNode mainFunctionNode;
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				setState(33);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(27);
					((PreproContext)_localctx).mainFunction = mainFunction();
					 nodeFactory.addFunction(((PreproContext)_localctx).mainFunction.result); 
					}
					break;
				case 2:
					{
					setState(30);
					((PreproContext)_localctx).function = function();
					 nodeFactory.addFunction(((PreproContext)_localctx).function.result); 
					}
					break;
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(EOF);
			 ((PreproContext)_localctx).result =  new MainNode(nodeFactory.getFunctionsAsArray()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public MainFunctionNode result;
		public FunctionArgumentsContext importDefinitions;
		public StatementContext statement;
		public ExportDefinitionsContext exportDefinitions;
		public ExportDefinitionsContext exportDefinitions() {
			return getRuleContext(ExportDefinitionsContext.class,0);
		}
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterMainFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitMainFunction(this);
		}
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			 nodeFactory.startStatementList(); 
			setState(43);
			match(T__1);
			setState(44);
			match(T__2);
			setState(45);
			match(T__3);
			setState(46);
			match(T__4);
			setState(47);
			match(T__5);
			setState(48);
			((MainFunctionContext)_localctx).importDefinitions = functionArguments();
			setState(49);
			match(T__6);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__13) | (1L << T__14) | (1L << TYPE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(50);
				((MainFunctionContext)_localctx).statement = statement();
				 nodeFactory.addStatement(((MainFunctionContext)_localctx).statement.result, (((MainFunctionContext)_localctx).statement!=null?(((MainFunctionContext)_localctx).statement.start):null).getLine()); 
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(T__7);
			setState(59);
			((MainFunctionContext)_localctx).exportDefinitions = exportDefinitions();
			setState(60);
			match(T__6);
			setState(61);
			match(T__8);
			 ((MainFunctionContext)_localctx).result =  new MainFunctionNode("main", ((MainFunctionContext)_localctx).importDefinitions.result, ((MainFunctionContext)_localctx).exportDefinitions.result, new StatementListNode(nodeFactory.getStatementsAsArray())); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportDefinitionsContext extends ParserRuleContext {
		public List<String> result;
		public Token IDENTIFIER;
		public List<TerminalNode> IDENTIFIER() { return getTokens(PreProParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PreProParser.IDENTIFIER, i);
		}
		public ExportDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterExportDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitExportDefinitions(this);
		}
	}

	public final ExportDefinitionsContext exportDefinitions() throws RecognitionException {
		ExportDefinitionsContext _localctx = new ExportDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exportDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ExportDefinitionsContext)_localctx).result =  new ArrayList<>(); 
			setState(65);
			((ExportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			 _localctx.result.add((((ExportDefinitionsContext)_localctx).IDENTIFIER!=null?((ExportDefinitionsContext)_localctx).IDENTIFIER.getText():null)); 
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(67);
				match(T__9);
				setState(68);
				((ExportDefinitionsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				 _localctx.result.add((((ExportDefinitionsContext)_localctx).IDENTIFIER!=null?((ExportDefinitionsContext)_localctx).IDENTIFIER.getText():null)); 
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionNode result;
		public Token IDENTIFIER;
		public FunctionArgumentsContext functionArguments;
		public Token returnType;
		public StatementContext statement;
		public ExpressionContext returnExpression;
		public TerminalNode IDENTIFIER() { return getToken(PreProParser.IDENTIFIER, 0); }
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode TYPE() { return getToken(PreProParser.TYPE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__0);
			 nodeFactory.startStatementList(); 
			setState(77);
			((FunctionContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(78);
			match(T__2);
			setState(79);
			((FunctionContext)_localctx).functionArguments = functionArguments();
			setState(80);
			match(T__3);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(81);
				match(T__10);
				setState(82);
				((FunctionContext)_localctx).returnType = match(TYPE);
				}
			}

			setState(85);
			match(T__4);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__13) | (1L << T__14) | (1L << TYPE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(86);
				((FunctionContext)_localctx).statement = statement();
				 nodeFactory.addStatement(((FunctionContext)_localctx).statement.result, (((FunctionContext)_localctx).statement!=null?(((FunctionContext)_localctx).statement.start):null).getLine()); 
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(94);
				match(T__11);
				setState(95);
				((FunctionContext)_localctx).returnExpression = expression();
				setState(96);
				match(T__6);
				}
			}

			setState(100);
			match(T__8);
			 List<ParameterDefinition> functionArguments = (_localctx.functionArguments == null) ? null : ((FunctionContext)_localctx).functionArguments.result;
			                                      ExpressionNode returnExpression = (_localctx.returnExpression == null) ? null : ((FunctionContext)_localctx).returnExpression.result;
			                                      ((FunctionContext)_localctx).result =  new FunctionNode((((FunctionContext)_localctx).IDENTIFIER!=null?((FunctionContext)_localctx).IDENTIFIER.getText():null), (((FunctionContext)_localctx).returnType!=null?((FunctionContext)_localctx).returnType.getText():null),
			                                      functionArguments, new StatementListNode(nodeFactory.getStatementsAsArray()),
			                                      returnExpression); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgumentsContext extends ParserRuleContext {
		public List<ParameterDefinition> result;
		public Token TYPE;
		public Token IDENTIFIER;
		public List<TerminalNode> TYPE() { return getTokens(PreProParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(PreProParser.TYPE, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(PreProParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PreProParser.IDENTIFIER, i);
		}
		public FunctionArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterFunctionArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitFunctionArguments(this);
		}
	}

	public final FunctionArgumentsContext functionArguments() throws RecognitionException {
		FunctionArgumentsContext _localctx = new FunctionArgumentsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionArguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((FunctionArgumentsContext)_localctx).result =  new ArrayList<>(); 
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(104);
				((FunctionArgumentsContext)_localctx).TYPE = match(TYPE);
				setState(105);
				((FunctionArgumentsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				 _localctx.result.add(nodeFactory.createParameterDefiniton((((FunctionArgumentsContext)_localctx).TYPE!=null?((FunctionArgumentsContext)_localctx).TYPE.getText():null), (((FunctionArgumentsContext)_localctx).IDENTIFIER!=null?((FunctionArgumentsContext)_localctx).IDENTIFIER.getText():null))); 
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__9) {
					{
					{
					setState(107);
					match(T__9);
					setState(108);
					((FunctionArgumentsContext)_localctx).TYPE = match(TYPE);
					setState(109);
					((FunctionArgumentsContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					 _localctx.result.add(nodeFactory.createParameterDefiniton((((FunctionArgumentsContext)_localctx).TYPE!=null?((FunctionArgumentsContext)_localctx).TYPE.getText():null), (((FunctionArgumentsContext)_localctx).IDENTIFIER!=null?((FunctionArgumentsContext)_localctx).IDENTIFIER.getText():null))); 
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementNode result;
		public AssignStatementContext assignStatement;
		public ExpressionContext expression;
		public PrintStatementContext printStatement;
		public DebugStatementContext debugStatement;
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public DebugStatementContext debugStatement() {
			return getRuleContext(DebugStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(118);
				((StatementContext)_localctx).assignStatement = assignStatement();
				 ((StatementContext)_localctx).result =  ((StatementContext)_localctx).assignStatement.result; 
				}
				break;
			case 2:
				{
				setState(121);
				((StatementContext)_localctx).expression = expression();
				 ((StatementContext)_localctx).result =  new NopStatementNode(((StatementContext)_localctx).expression.result); 
				}
				break;
			case 3:
				{
				setState(124);
				((StatementContext)_localctx).printStatement = printStatement();
				 ((StatementContext)_localctx).result =  ((StatementContext)_localctx).printStatement.result; 
				}
				break;
			case 4:
				{
				setState(127);
				((StatementContext)_localctx).debugStatement = debugStatement();
				 ((StatementContext)_localctx).result =  new DebugNode((((StatementContext)_localctx).debugStatement!=null?(((StatementContext)_localctx).debugStatement.start):null).getLine()); 
				}
				break;
			}
			setState(132);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public AssignStatementNode result;
		public Token TYPE;
		public Token i;
		public ExpressionContext e;
		public TerminalNode IDENTIFIER() { return getToken(PreProParser.IDENTIFIER, 0); }
		public TerminalNode TYPE() { return getToken(PreProParser.TYPE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitAssignStatement(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(134);
				((AssignStatementContext)_localctx).TYPE = match(TYPE);
				}
			}

			setState(137);
			((AssignStatementContext)_localctx).i = match(IDENTIFIER);
			setState(138);
			match(T__12);
			{
			setState(139);
			((AssignStatementContext)_localctx).e = expression();
			 ((AssignStatementContext)_localctx).result =  new AssignStatementNode((((AssignStatementContext)_localctx).i!=null?((AssignStatementContext)_localctx).i.getText():null), (((AssignStatementContext)_localctx).TYPE!=null?((AssignStatementContext)_localctx).TYPE.getText():null), ((AssignStatementContext)_localctx).e.result); 
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallStatementContext extends ParserRuleContext {
		public FunctionCallNode result;
		public Token IDENTIFIER;
		public ExpressionContext expression;
		public TerminalNode IDENTIFIER() { return getToken(PreProParser.IDENTIFIER, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FunctionCallStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCallStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterFunctionCallStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitFunctionCallStatement(this);
		}
	}

	public final FunctionCallStatementContext functionCallStatement() throws RecognitionException {
		FunctionCallStatementContext _localctx = new FunctionCallStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionCallStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			((FunctionCallStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(143);
			match(T__2);
			 nodeFactory.startExpressionList(); 
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2 || _la==IDENTIFIER) {
				{
				setState(145);
				((FunctionCallStatementContext)_localctx).expression = expression();
				 nodeFactory.addExpression(((FunctionCallStatementContext)_localctx).expression.result); 
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__9) {
					{
					{
					setState(147);
					match(T__9);
					setState(148);
					((FunctionCallStatementContext)_localctx).expression = expression();
					 nodeFactory.addExpression(((FunctionCallStatementContext)_localctx).expression.result); 
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(158);
			match(T__3);
			 ((FunctionCallStatementContext)_localctx).result =  new FunctionCallNode((((FunctionCallStatementContext)_localctx).IDENTIFIER!=null?((FunctionCallStatementContext)_localctx).IDENTIFIER.getText():null), nodeFactory.getExpressionsAsList()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public PrintStatementNode result;
		public ExpressionContext expression;
		public Token STRING_LITERAL;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(PreProParser.STRING_LITERAL, 0); }
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).enterPrintStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreProListener ) ((PreProListener)listener).exitPrintStatement(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__13);
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case IDENTIFIER:
				{
				setState(162);
				((PrintStatementContext)_localctx).expression = expression();
				 ((PrintStatementContext)_localctx).result =  new PrintStatementNode(((PrintStatementContext)_localctx).expression.result); 
				}
				break;
			case STRING_LITERAL:
				{
				setState(165);
				((PrintStatementContext)_localctx).STRING_LITERAL = match(STRING_LITERAL);
				 ((PrintStatementContext)_localctx).result =  new PrintStatementNode((((PrintStatementContext)_localctx).STRING_LITERAL!=null?((PrintStatementContext)_localctx).STRING_LITERAL.getText():null).substring(1, (((PrintStatementContext)_localctx).STRING_LITERAL!=null?((PrintStatementContext)_localctx).STRING_LITERAL.getText():null).length() - 1)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
